Add chocolatey deployment to build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,4 +9,10 @@ test: off
 artifacts:
 - path: '\whats-new*.nupkg'
   name: Chocolatey
-deploy: off
+deploy: 
+- provider: NuGet
+  server: https://chocolatey.org/
+  api_key:
+    secure: nB1mf4p3RJjf/Qsqjx0s/D7WWM7nnKUu/wN2x3+XUxe+mNyg0U8pS9jHw49oiJkA
+  on:
+    branch: master
