--- a/src/whats-new.nuspec
+++ b/src/whats-new.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/refactorsaurusrex/whats-new</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/refactorsaurusrex/whats-new/master/whats-new.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Powershell functions for versioning a git repo with tags and more!</description>
+    <description>PowerShell functions for versioning a git repo with tags and more!</description>
     <copyright>Copyright 2018</copyright>
     <tags>git semver</tags>
   </metadata>
