--- a/src/WhatsNew/WhatsNew.csproj
+++ b/src/WhatsNew/WhatsNew.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="WhatsNew.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
     <PackageReference Include="XmlDoc2CmdletDoc" Version="0.2.12">
