--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ branches:
 skip_tags: true
 image: Visual Studio 2017
 build_script:
-- ps: '& ".\build.ps1"'
+- pwsh: '& ".\build.ps1"'
 test: off
 deploy_script:
 - pwsh: Publish-Module -NuGetApiKey $env:psgallery -Path .\publish\WhatsNew
