--- a/src/WhatsNew/WhatsNew.csproj
+++ b/src/WhatsNew/WhatsNew.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl" Version="2.8.2" />
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
   </ItemGroup>
